--- a/src/app/source/source.component.html
+++ b/src/app/source/source.component.html
@@ -1,7 +1,8 @@
 <div id="source">
   <header>
-    <input type="checkbox" name="selected" value="length" id="length">
-    <label for="length">13/{{dataStore.getAllData.length}}项</label>
+    <input type="checkbox" name="selected" value="length" id="length" (click)="checkAll()" #checkbox>
+    <label for="length">{{checkNum}}/{{dataStore.getAllData.length}}项</label>
     <span>Source</span>
   </header>
+  <app-source-inner (checkOutputNum)="changeCheckNum($event)"></app-source-inner>
 </div>
