完成source组件功能

--- a/src/app/source/source.component.css
+++ b/src/app/source/source.component.css
@@ -2,6 +2,8 @@
   width: 200px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  display: inline-block;
+  vertical-align: middle;
 }
 #source header{
   border-bottom: 1px solid #cccccc;
