--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <div id="app" *mobxAutorun>
   <app-source></app-source>
+  <div id="button">
+    <button [className]="dataStore.getCheckData.length?'checkedButton':'defaultButton'"><</button>
+    <button>></button>
+  </div>
 </div>
