新增取消选定状态

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <div id="app" *mobxAutorun>
   <app-source></app-source>
   <div id="button">
-    <button><</button>
+    <button [className]="dataStore.getCancelData.length?'checkedButton':'defaultButton'"
+            (click)="selectToTarget()"
+            [disabled]="!dataStore.getCancelData.length"><
+    </button>
     <button [className]="dataStore.getCheckData.length?'checkedButton':'defaultButton'"
             (click)="selectToTarget()"
             [disabled]="!dataStore.getCheckData.length">>
